More muted colors

--- a/app/components/styles.css
+++ b/app/components/styles.css
@@ -1,10 +1,9 @@
 .red {
-  color: #D50000 !important;
+  color: #af684c!important;
 }
 .blue {
-  color: #2196F3 !important;
+  color: #555786 !important;
 }
 .purple {
-  color: #aa759f !important;
+  color: #8a556f !important;
 }
-
